fixed overflow

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -16,7 +16,7 @@
 }
 
 
-html{
+html,body{
     overflow-x: hidden;
 }
 
@@ -27,6 +27,7 @@ a{
 
 body{
     background-color: rgb(0, 0, 0);
+    
     
     
 }
